--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
 <nav>
-    <h3>Ma<span>r</span>y</h3>
+    <h3 class="banner-caption">Ma<span class="orange">r</span>y</h3>
     <ul>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Blog</a></li>
-        <li><button>Hire Me</button></li>
+        <li><button class="btn-primary">Hire Me</button></li>
     </ul>
 </nav>
     </header>
