--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
-    <header>
-<nav>
-    <h3 class="banner-caption">Ma<span class="orange">r</span>y</h3>
-    <ul>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Blog</a></li>
-        <li><button class="btn-primary">Hire Me</button></li>
-    </ul>
-</nav>
+    <header class="header">
+        <nav>
+            <h3 class="nav-caption">Ma<span class="orange">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-description">
+                <h3>
+                    Hi, I am
+                </h3>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
@@ -28,4 +44,5 @@
 
     </footer>
 </body>
+
 </html>
