--- a/index.html
+++ b/index.html
@@ -41,7 +41,106 @@
 <section class="about">
     <h3 class="section-title">About Me</h3>
     <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+    <div class="about-info-container">
+        <!-- .about-info*4>h4.info-title+p.info-description -->
+        <div class="about-info">
+            <h4 class="info-title">name</h4>
+            <p class="info-description">Mary hardy</p>
+        </div>
+        <div class="about-info">
+            <h4 class="info-title">Gmail</h4>
+            <p class="info-description">info@gmail.com</p>
+        </div>
+        <div class="about-info">
+            <h4 class="info-title">Date of birth</h4>
+            <p class="info-description">11 November 1987</p>
+        </div>
+        <div class="about-info">
+            <h4 class="info-title">from</h4>
+            <p class="info-description">Los Angeles, USA</p>
+        </div>
+        </div>
+
 </section>
+<section class="what-i-do">
+    <h3 class="section-title">What I do</h3>
+    <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+    <div class="skill-container">
+        <div class="skills">
+            <img src="images/icons/js.png" alt="">
+            <h5 class="skill-title">Vanilla JavaScript</h5>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skills">
+            <img src="images/icons/react.png" alt="">
+            <h5 class="skill-title">React</h5>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skills">
+            <img src="images/icons/nodejs.png" alt="">
+            <h5 class="skill-title">Node.js</h5>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skills">
+            <img src="images/icons/mongo.png" alt="">
+            <h5 class="skill-title">MongoDB</h5>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+</section>
+<section class="resume-section">
+    <h3 class="resume-title">A summary of My Resume</h3>
+    <div class="resume-information">
+        <div class="resume-education">
+            <h3 class="resume-education-title">My Education</h3>
+            <div class="institusions">
+                <h3 class="institusions-heading">Master in Computer Engineering</h3>
+                <h5 class="institusions-sub-heading">Harvard University / 2015 - 2017</h5>
+                <p class="institusions-description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="institusions">
+                <h3 class="institusions-heading">Master in Computer Engineering</h3>
+                <h5 class="institusions-sub-heading">Harvard University / 2015 - 2017</h5>
+                <p class="institusions-description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="institusions">
+                <h3 class="institusions-heading">Master in Computer Engineering</h3>
+                <h5 class="institusions-sub-heading">Harvard University / 2015 - 2017</h5>
+                <p class="institusions-description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+        <div class="resume-experience">
+            <h3 class="resume-experience-title">My Experience</h3>
+            <div class="institusions">
+                <h3 class="institusions-headinf">Sr. Font End Developer</h3>
+                <h5 class="institusions-sub-heading">Apple Inc / 2020 - Current</h5>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="institusions">
+                <h3 class="institusions-headinf">Jr. Font End Developer</h3>
+                <h5 class="institusions-sub-heading">Dribbble Inc / 2018 - 2022</h5>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="institusions">
+                <h3 class="institusions-headinf">HTML Developer</h3>
+                <h5 class="institusions-sub-heading">Adobe Inc / 2017 - 2018</h5>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+    </div>
+    <button class="btn-primary">Download CV</button>
+</section>
+
     </main>
     <footer>
 
