--- a/index.html
+++ b/index.html
@@ -143,7 +143,30 @@
 
     </main>
     <footer>
+<section class="footer-section">
+   <div class="footer-information">
+    <div class="footer-colum">
+        <h3 class="footer-colum-title">Lets Connect</h3>
+    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+    <div class="anchors-div">
+        <a href=""><img src="images/icons/facebook.png" alt=""></a><a href=""><img src="images/icons/insta.png" alt=""></a><a href=""><img src="images/icons/twitter.png" alt=""></a>
+    </div>
+    </div>
 
+   <div class="footer-colum">
+    <h3 class="footer-colum-title">Let’s Message me</h3>
+    <form action="">
+        <input type="text" placeholder="Your Name">
+        <br>
+        <input type="text" placeholder="Your Email">
+        <br>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+        <br>
+        <button class="btn-primary">Submit</button>
+    </form>
+   </div>
+   </div>
+</section>
     </footer>
 </body>
 
